Updated encryption code to correctly handle element content for interop tests
git-svn-id: https://svn.apache.org/repos/asf/xml/security/trunk@350739 13f79535-47bb-0310-9956-ffa450edef68